# inori

./: .gitignore  .gitmodules  CONFIGURATION.md  CONFIGURATION.org  Cargo.toml  README.md  README.org  flake.nix  rustfmt.toml
pkgs/: default.nix
pkgs/inori/: default.nix
pkgs/inori-logo/: default.nix
pkgs/inori-logo/src/: inori-logo.tex
src/: config.rs  event_handler.rs  main.rs  model.rs  update.rs  util.rs  view.rs
src/config/: keybind.rs
src/model/: impl_album_song.rs  impl_artiststate.rs  impl_library.rs  impl_queue.rs  impl_searchstate.rs  proto.rs  search_utils.rs  selector_state.rs
src/update/: build_library.rs  handlers.rs  updaters.rs
src/update/handlers/: library_handler.rs  queue_handler.rs
src/view/: artist_select_renderer.rs  library_renderer.rs  queue_renderer.rs  search_renderer.rs  status_renderer.rs  track_select_renderer.rs
