[package]
name = "inori"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = {version = "0.27.0", features = ["serde"]}
nucleo-matcher = "*"
itertools = "*"
bitflags = "*"
toml = "*"

[dependencies.mpd]
path = "./rust-mpd"

[features]
default = ["dvorak_movement_keys"]
dvorak_movement_keys = []
qwerty_movement_keys = []
